# G-Headless

./: .gitignore  AGENTS.md  README.md  ansible.cfg  bootstrap-arch.yml  bootstrap-pi.yml  config.yml  config.yml.example  install-deps.sh  mise.toml  pyproject.toml  vault.yml
.learnings/: ERRORS.md  LEARNINGS.md
files/: authorized_keys
playbooks/post-bootstrap/: resize.yml
roles/bootstrap-arch/defaults/: main.yml
roles/bootstrap-arch/tasks/: bootstrap.yml  cleanup.yml  emergency-cleanup.yml  main.yml  network.yml  partition.yml
roles/bootstrap-pi/defaults/: main.yml
roles/bootstrap-pi/tasks/: emergency-cleanup.yml  main.yml  pi-chroot.yml  pi-cleanup.yml  pi-prepare.yml
